# Flipper-Zero-Game-Boy-Pokemon-Trading

./: README.md  README_catalog.md  TODO.md
rp2040_firmware/: CMakeLists.txt  README_RP2040.md  cgi_handlers.c  gb_link_protocol.c  gb_link_protocol.h  gb_link_protocol.pio.h  item_nl.c  lwipopts.h  main.c  move_nl.c  named_list.c  pokemon_char_encode.c  pokemon_data.c  pokemon_storage.c  pokemon_table.c  stat_nl.c  trade_logic.c  type_nl.c  web_server.c
rp2040_firmware/fs/: index.html  script.js  style.css
rp2040_firmware/include/: cgi_handlers.h  gb_link_protocol.h  pokemon_data.h  pokemon_data_i.h  pokemon_storage.h  pokemon_table.h  trade_logic.h  web_server.h
rp2040_zero/: .gitignore  CMakeLists.txt  CMakeLists_test.txt  README.md  gb_link.c  gb_link.h  main.c  simple_bridge.py  storage.c  storage.h  test_bridge_fix.py  test_hardware.c  ui.c  ui.h  usb_bridge.py  web_ui.c  web_ui.h  working_bridge.py
rp2040_zero/.cache/clangd/index/: gb_link.c.DB34381F43FF7493.idx  gb_link.h.EA3FDC18FF45133B.idx  main.c.36FD89CE4DB6A59E.idx  storage.c.9E75E1F9B9B24202.idx  storage.h.1AEAEA56BAD0D8D4.idx  ui.c.371BBC0B40C5D3EC.idx  ui.h.594CA24DFCCD6A3E.idx
